--- a/templates/videoshow.html
+++ b/templates/videoshow.html
@@ -100,7 +100,7 @@
                     return true;
                 });
         } else {
-            window.location.href = "http://127.0.0.1:8000/login"
+            window.location.href = "https://tiktokermishra.herokuapp.com/login"
         }
     }
 
@@ -113,7 +113,7 @@
         } catch (err) {
             console.log();
         }
-        var copyText = "http://127.0.0.1:8000/filters?videoid={{data.id}}";
+        var copyText = "https://tiktokermishra.herokuapp.com/filters?videoid={{data.id}}";
         const el = document.createElement('textarea');
         el.value = copyText;
         document.body.appendChild(el);
@@ -128,11 +128,11 @@
     });
 
     document.getElementById("prvbtn").addEventListener('click', function() {
-        window.location.href = "http://127.0.0.1:8000/prevvideo"
+        window.location.href = "https://tiktokermishra.herokuapp.com/prevvideo"
     });
 
     document.getElementById("nxtbtn").addEventListener('click', function() {
-        window.location.href = "http://127.0.0.1:8000/nextvideo"
+        window.location.href = "https://tiktokermishra.herokuapp.com/nextvideo"
     });
 
     function outFunc() {
